--- a/static/exploreStyle.css
+++ b/static/exploreStyle.css
@@ -1,3 +1,13 @@
+* {
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+}
+
+body {
+    font-family: "Roboto", sans-serif;
+    scroll-behavior: smooth;
+}
 /* Top text */
 h1 {
     font-size: 50px;
